--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-calendar": "^0.27.14",
     "core-js": "^2.4.1",
+    "date-fns": "^1.30.1",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "rxjs": "^5.5.6",
