--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "angular-calendar": "^0.27.14",
+    "angular2-csv": "^0.2.9",
+    "angular2-json2csv": "^1.1.2",
     "core-js": "^2.4.1",
     "date-fns": "^1.30.1",
     "lodash": "^4.17.11",
