--- a/nodeApp/package.json
+++ b/nodeApp/package.json
@@ -12,6 +12,7 @@
     "@mysql/xdevapi": "8.0.17",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "mysql": "^2.16.0"
   },
