--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^11.2.3",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
@@ -22,14 +23,17 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@swimlane/ngx-charts": "^12.1.0",
     "angular-calendar": "^0.27.14",
     "angular2-csv": "^0.2.9",
     "angular2-json2csv": "^1.1.2",
+    "chart.js": "^2.9.4",
     "core-js": "^2.4.1",
     "date-fns": "^1.30.1",
     "export-to-csv": "^0.2.1",
     "lodash": "^4.17.15",
     "moment": "^2.22.2",
+    "ng2-charts": "^2.2.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
